# nexusTasks

./: README.md  package-lock.json
Docker/project/: Dockerfile  docker-compose.yml  pyproject.toml
Docker/project/Todo/: settings.py  urls.py
Docker/project/api/: models.py  serializers.py  urls.py  views.py
Docker/project/api/migrations/: 0001_initial.py
Docker/project/testApp/: admin.py  models.py  views.py
Docker/project/testApp/migrations/: 0001_initial.py
Docker/project/testApp/templates/: index.html
Docker_test/: docker-compose.yml
Docker_test/backend/: Dockerfile  pyproject.toml
Docker_test/backend/Todo/: settings.py  urls.py
Docker_test/backend/api/: models.py  views.py
Final/: package-lock.json  package.json
Final/src/: App.css  App.js
Final/src/pages/: Add.js  Edit.js  Home.js  atoms.js
Task 1/Sean/: package-lock.json
Task 1/Sean/src/: App.js
Task 1/issac/: package-lock.json  package.json
Task 1/issac/src/: App.css
Task 1/issac/src/components/: EditTodoForm.js  Todo.js  TodoForm.js  TodoWrapper.js
Task 1/todolist/: package-lock.json  package.json
Task 1/todolist/public/: index.html
Task 1/todolist/src/: App.css  App.js  index.js
Task 1/todolist/src/Pages/components/: Todolist.js
Task 1/todolist/src/components/: Form.js  Header.js  Todolist.js  globalState.js
TodoListSample/: package-lock.json  package.json  pyvenv.cfg
TodoListSample/Scripts/: activate  activate.bat
TodoListSample/TodoList/TodoList/: settings.py
TodoListSample/TodoList/api/: urls.py
TodoListSample/TodoList/api/migrations/: 0001_initial.py
