[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Issac <issacdread@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
postgres = "^4.0"
psycopg2 = "^2.9.6"
psycopg2-binary = "^2.9.6"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
